--- a/Index.html
+++ b/Index.html
@@ -1,179 +1,63 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Jogo: Adivinhe sobre Lúcifer</title>
-<style>
-  body {
-    background-color: #0d0d0d;
-    color: #e6e6e6;
-    font-family: 'Georgia', serif;
-    margin: 0;
-    padding: 20px;
-    display: flex; 
-    flex-direction: column; 
-    align-items: center;
-    min-height: 100vh;
-  }
-  h1 {
-    color: #e60000;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  #game-container {
-    background: #1a1a1a;
-    border-left: 5px solid #990000;
-    padding: 20px 30px;
-    max-width: 700px;
-    box-shadow: 0 0 15px #000;
-    width: 100%;
-    border-radius: 8px;
-  }
-  #question {
-    font-size: 1.4em;
-    margin-bottom: 20px;
-  }
-  .btns {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-  }
-  button {
-    background-color: #330000;
-    border: none;
-    padding: 12px 30px;
-    color: #fff;
-    font-size: 1.1em;
-    cursor: pointer;
-    border-radius: 6px;
-    transition: background-color 0.3s ease;
-    user-select: none;
-  }
-  button:hover {
-    background-color: #990000;
-  }
-  #feedback {
-    margin-top: 20px;
-    font-weight: bold;
-    font-size: 1.1em;
-    min-height: 24px;
-    text-align: center;
-    color: #ffcc00;
-  }
-  #score {
-    margin-top: 25px;
-    font-size: 1.2em;
-    text-align: center;
-  }
-  #restart-btn {
-    margin-top: 30px;
-    background-color: #660000;
-    display: none;
-  }
-  #restart-btn:hover {
-    background-color: #cc0000;
-  }
-  #ranking {
-    margin-top: 20px;
-    font-size: 1em;
-    text-align: center;
-    color: #ccc;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cuide da Sua Mente</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>Cuide da Sua Mente</h1>
+    <p>Um espaço para apoiar a saúde mental dos estudantes</p>
+  </header>
 
-<h1>👁️ Adivinhe sobre Lúcifer</h1>
+  <main>
+    <section>
+      <h2>Dicas de autocuidado</h2>
+      <ul>
+        <section>
+  <h2>Exercício de respiração</h2>
+  <p>Feche os olhos, inspire por 4 segundos, segure por 4 segundos e expire por 4 segundos. Repita 4 vezes.</p>
+  <p><strong>Dica:</strong> Faça isso antes de uma prova ou apresentação importante.</p>
+        </section>
+      </ul>
+    </section>
 
-<div id="game-container">
-  <div id="question">Carregando pergunta...</div>
-  <div class="btns">
-    <button id="btn-true">Sim</button>
-    <button id="btn-false">Não</button>
-  </div>
-  <div id="feedback"></div>
-  <div id="score"></div>
-  <button id="restart-btn">Recomeçar Jogo</button>
-  <div id="ranking"></div>
-</div>
+    <section>
+  <h2>Espaço de Desabafo Anônimo</h2>
+  <p>Aqui você pode escrever o que está sentindo. Ninguém vai te julgar.</p>
+  <textarea placeholder="O que você está sentindo hoje?" rows="5" cols="50"></textarea>
+  <br>
+  <button>Salvar para mim mesmo</button>
+    </section>
 
-<script>
-  const perguntas = [
-    { pergunta: "Lúcifer é um anjo caído?", resposta: true },
-    { pergunta: "Lúcifer é o Senhor do Inferno?", resposta: true },
-    { pergunta: "Lúcifer foi criado por um humano?", resposta: false },
-    { pergunta: "Lúcifer tem um irmão chamado Amenadiel?", resposta: true },
-    { pergunta: "Lúcifer não pode sentir dor?", resposta: false },
-    { pergunta: "Maze é uma demônio leal a Lúcifer?", resposta: true },
-    { pergunta: "Chloe tem poderes sobrenaturais?", resposta: false },
-    { pergunta: "Ella Lopez é uma cientista que também tem fé?", resposta: true },
-    { pergunta: "Amenadiel é contra Lúcifer durante toda a série?", resposta: false },
-    { pergunta: "O Lux é o clube de Lúcifer em Los Angeles?", resposta: true }
-  ];
+    <section>
+  <h2>Livros que ajudam</h2>
+  <ul>
+    <li><strong>O Poder do Hábito</strong> – Charles Duhigg</li>
+    <li><strong>A Coragem de Ser Imperfeito</strong> – Brené Brown</li>
+    <li><strong>Ansiedade: Como Enfrentar o Mal do Século</strong> – Augusto Cury</li>
+  </ul>
+    </section>
 
-  let index = 0;
-  let score = 0;
+    <section>
+      <h2>Ajuda profissional</h2>
+      <p>Se estiver se sentindo sobrecarregado, procure um psicólogo da escola ou um profissional de saúde mental.</p>
+    </section>
 
-  const questionEl = document.getElementById("question");
-  const feedbackEl = document.getElementById("feedback");
-  const scoreEl = document.getElementById("score");
-  const btnTrue = document.getElementById("btn-true");
-  const btnFalse = document.getElementById("btn-false");
-  const restartBtn = document.getElementById("restart-btn");
-  const rankingEl = document.getElementById("ranking");
+    <section>
+  <h2>Onde buscar ajuda</h2>
+  <p>Se você estiver em crise, entre em contato com:</p>
+  <ul>
+    <li><strong>CVV:</strong> 188 (ligação gratuita)</li>
+    <li><strong>Psicólogos escolares</strong> ou <strong>postos de saúde</strong></li>
+    <li>Amigos e familiares de confiança</li>
+  </ul>
+    </section>
+  </main>
 
-  function carregarPergunta() {
-    feedbackEl.textContent = "";
-    if(index < perguntas.length) {
-      questionEl.textContent = perguntas[index].pergunta;
-      scoreEl.textContent = `Pergunta ${index + 1} de ${perguntas.length}`;
-    } else {
-      questionEl.textContent = "Fim do jogo! Obrigada por jogar.";
-      scoreEl.textContent = `Você acertou ${score} de ${perguntas.length} perguntas.`;
-      btnTrue.style.display = "none";
-      btnFalse.style.display = "none";
-      restartBtn.style.display = "block";
-      atualizarRanking();
-    }
-  }
-
-  function responder(respostaUsuario) {
-    if(index >= perguntas.length) return;
-    if(respostaUsuario === perguntas[index].resposta) {
-      feedbackEl.textContent = "✔️ Correto!";
-      score++;
-    } else {
-      feedbackEl.textContent = "❌ Errado!";
-    }
-    index++;
-    setTimeout(carregarPergunta, 1500);
-  }
-
-  function atualizarRanking() {
-    const melhorPontuacao = localStorage.getItem('melhorPontuacaoLucifer') || 0;
-    if(score > melhorPontuacao) {
-      localStorage.setItem('melhorPontuacaoLucifer', score);
-      rankingEl.textContent = `🎉 Novo recorde! Sua melhor pontuação é: ${score} acertos.`;
-    } else {
-      rankingEl.textContent = `Sua melhor pontuação: ${melhorPontuacao} acertos. Tente superar!`;
-    }
-  }
-
-  btnTrue.addEventListener("click", () => responder(true));
-  btnFalse.addEventListener("click", () => responder(false));
-  restartBtn.addEventListener("click", () => {
-    index = 0;
-    score = 0;
-    btnTrue.style.display = "inline-block";
-    btnFalse.style.display = "inline-block";
-    restartBtn.style.display = "none";
-    rankingEl.textContent = "";
-    carregarPergunta();
-  });
-
-  carregarPergunta();
-</script>
-
+  <footer>
+    <p>Feito com carinho 💚</p>
+  </footer>
 </body>
 </html>
