--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,71 @@
 <html>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #F5F5DC;
+    color: #4B4B4B;
+  }
+
+  header {
+    background-color: #D2B48C;
+    padding: 2rem;
+    text-align: center;
+    color: #fff;
+  }
+
+  main {
+    padding: 2rem;
+  }
+
+  section {
+    margin-bottom: 2rem;
+    background-color: #FAFAF5;
+    padding: 1rem;
+    border-left: 6px solid #A3B18A;
+    border-radius: 5px;
+  }
+
+  footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #A3B18A;
+    color: #fff;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  }
+
+  .modal-conteudo {
+    background-color: #FAFAF5;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #A3B18A;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .fechar {
+    color: #888;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+</style>
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
