--- a/Index.html
+++ b/Index.html
@@ -1,76 +1,99 @@
-<html>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #F5F5DC;
-    color: #4B4B4B;
-  }
-
-  header {
-    background-color: #D2B48C;
-    padding: 2rem;
-    text-align: center;
-    color: #fff;
-  }
-
-  main {
-    padding: 2rem;
-  }
-
-  section {
-    margin-bottom: 2rem;
-    background-color: #FAFAF5;
-    padding: 1rem;
-    border-left: 6px solid #A3B18A;
-    border-radius: 5px;
-  }
-
-  footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #A3B18A;
-    color: #fff;
-  }
-
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-  }
-
-  .modal-conteudo {
-    background-color: #FAFAF5;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #A3B18A;
-    width: 80%;
-    max-width: 400px;
-    border-radius: 10px;
-    text-align: center;
-  }
-
-  .fechar {
-    color: #888;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-</style>
-  
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cuide da Sua Mente</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #F5F5DC;
+      color: #3A3A3A;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #D2B48C;
+      padding: 2.5rem;
+      text-align: center;
+      color: #fff;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    section {
+      margin-bottom: 2.5rem;
+      background-color: #FAFAF5;
+      padding: 1.5rem;
+      border-left: 6px solid #A3B18A;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      color: #5A5A5A;
+    }
+
+    button {
+      background-color: #A3B18A;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #8DA178;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #A3B18A;
+      color: #fff;
+      margin-top: 2rem;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      padding-top: 100px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+    }
+
+    .modal-conteudo {
+      background-color: #FAFAF5;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #A3B18A;
+      width: 80%;
+      max-width: 400px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .fechar {
+      color: #888;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -82,49 +105,75 @@
     <section>
       <h2>Dicas de autocuidado</h2>
       <ul>
-        <section>
-  <h2>Exercício de respiração</h2>
-  <p>Feche os olhos, inspire por 4 segundos, segure por 4 segundos e expire por 4 segundos. Repita 4 vezes.</p>
-  <p><strong>Dica:</strong> Faça isso antes de uma prova ou apresentação importante.</p>
-        </section>
+        <li>Respire fundo por 1 minuto</li>
+        <li>Evite se comparar com os outros</li>
+        <li>Durma bem e se alimente direito</li>
+        <li>Organize sua rotina com pausas</li>
+        <li>Fale com alguém de confiança</li>
+        <li>Escreva o que está sentindo</li>
+        <li>Faça algo que você ama, mesmo por 10 minutos</li>
+      </ul>
+      <button onclick="abrirModal()">Mensagem especial 💚</button>
+    </section>
+
+    <section>
+      <h2>Frases motivacionais</h2>
+      <blockquote>"Você é mais forte do que pensa, e será mais feliz do que imagina."</blockquote>
+      <blockquote>"Tudo bem não estar bem. Procure ajuda, você não está sozinho."</blockquote>
+    </section>
+
+    <section>
+      <h2>Rotina saudável para estudantes</h2>
+      <ul>
+        <li>🌅 Acorde no mesmo horário todos os dias</li>
+        <li>📚 Separe tempo para estudar e descansar</li>
+        <li>🍎 Faça pausas para se alimentar bem</li>
+        <li>🏃‍♀️ Inclua uma caminhada ou alongamento diário</li>
+        <li>🛏️ Durma pelo menos 7 a 8 horas por noite</li>
       </ul>
     </section>
 
     <section>
-  <h2>Espaço de Desabafo Anônimo</h2>
-  <p>Aqui você pode escrever o que está sentindo. Ninguém vai te julgar.</p>
-  <textarea placeholder="O que você está sentindo hoje?" rows="5" cols="50"></textarea>
-  <br>
-  <button>Salvar para mim mesmo</button>
-    </section>
-
-    <section>
-  <h2>Livros que ajudam</h2>
-  <ul>
-    <li><strong>O Poder do Hábito</strong> – Charles Duhigg</li>
-    <li><strong>A Coragem de Ser Imperfeito</strong> – Brené Brown</li>
-    <li><strong>Ansiedade: Como Enfrentar o Mal do Século</strong> – Augusto Cury</li>
-  </ul>
+      <h2>Playlist calmante 🎵</h2>
+      <p>Ouça uma playlist feita especialmente para momentos de relaxamento:</p>
+      <a href="https://open.spotify.com/playlist/37i9dQZF1DX3Ogo9pFvBkY" target="_blank">Acesse no Spotify</a>
     </section>
 
     <section>
       <h2>Ajuda profissional</h2>
       <p>Se estiver se sentindo sobrecarregado, procure um psicólogo da escola ou um profissional de saúde mental.</p>
     </section>
-
-    <section>
-  <h2>Onde buscar ajuda</h2>
-  <p>Se você estiver em crise, entre em contato com:</p>
-  <ul>
-    <li><strong>CVV:</strong> 188 (ligação gratuita)</li>
-    <li><strong>Psicólogos escolares</strong> ou <strong>postos de saúde</strong></li>
-    <li>Amigos e familiares de confiança</li>
-  </ul>
-    </section>
   </main>
 
   <footer>
     <p>Feito com carinho 💚</p>
   </footer>
+
+  <!-- Modal -->
+  <div id="janelaModal" class="modal">
+    <div class="modal-conteudo">
+      <span class="fechar" onclick="fecharModal()">&times;</span>
+      <h2>Você importa 💚</h2>
+      <p>Lembre-se: sua saúde mental é prioridade. Nunca tenha medo de pedir ajuda!</p>
+    </div>
+  </div>
+
+  <!-- JS do modal -->
+  <script>
+    function abrirModal() {
+      document.getElementById("janelaModal").style.display = "block";
+    }
+
+    function fecharModal() {
+      document.getElementById("janelaModal").style.display = "none";
+    }
+
+    window.onclick = function(event) {
+      const modal = document.getElementById("janelaModal");
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 </body>
-</html>
+          </html>
