--- a/Index.html
+++ b/Index.html
@@ -174,6 +174,44 @@
         modal.style.display = "none";
       }
     }
+    <main>
+  ...
+  <!-- Outras seções -->
+  
+  <!-- AQUI -->
+  <section id="quiz">
+    <!-- Teste de saúde mental aqui -->
+  </section>
+
+      <script>
+  function calcularResultado() {
+    const perguntas = ['q1', 'q2', 'q3', 'q4', 'q5'];
+    let total = 0;
+
+    for (let i = 0; i < perguntas.length; i++) {
+      const resposta = document.querySelector(`input[name="${perguntas[i]}"]:checked`);
+      if (resposta) {
+        total += parseInt(resposta.value);
+      } else {
+        document.getElementById("resultadoQuiz").innerText = "Responda todas as perguntas, por favor.";
+        return;
+      }
+    }
+
+    let resultado = "";
+    if (total <= 7) {
+      resultado = "⚠️ Sua saúde mental pode estar sobrecarregada. Considere buscar apoio ou conversar com alguém de confiança.";
+    } else if (total <= 11) {
+      resultado = "🟡 Você está em um ponto de atenção. Tente equilibrar suas emoções com pausas e momentos de autocuidado.";
+    } else {
+      resultado = "🟢 Sua saúde mental parece estar bem! Continue cuidando de si e mantendo uma rotina saudável.";
+    }
+
+    document.getElementById("resultadoQuiz").innerText = resultado;
+  }
+</script>
+      
+</main>
   </script>
 </body>
           </html>
