--- a/Index.html
+++ b/Index.html
@@ -143,6 +143,39 @@
       <h2>Ajuda profissional</h2>
       <p>Se estiver se sentindo sobrecarregado, procure um psicólogo da escola ou um profissional de saúde mental.</p>
     </section>
+
+    <section>
+      <h2>Teste rápido de saúde mental</h2>
+      <form id="testeSaudeMental">
+        <p>1. Você sente que consegue descansar mentalmente ao longo do dia?</p>
+        <label><input type="radio" name="q1" value="1"> Raramente</label><br>
+        <label><input type="radio" name="q1" value="2"> Às vezes</label><br>
+        <label><input type="radio" name="q1" value="3"> Frequentemente</label><br><br>
+
+        <p>2. Como você reage ao estresse no dia a dia?</p>
+        <label><input type="radio" name="q2" value="1"> Me sinto sobrecarregado com facilidade</label><br>
+        <label><input type="radio" name="q2" value="2"> Depende do dia</label><br>
+        <label><input type="radio" name="q2" value="3"> Lido bem com o estresse</label><br><br>
+
+        <p>3. Você tem conseguido dormir bem?</p>
+        <label><input type="radio" name="q3" value="1"> Não</label><br>
+        <label><input type="radio" name="q3" value="2"> Mais ou menos</label><br>
+        <label><input type="radio" name="q3" value="3"> Sim</label><br><br>
+
+        <p>4. Você se sente animado para as atividades do dia?</p>
+        <label><input type="radio" name="q4" value="1"> Não mesmo</label><br>
+        <label><input type="radio" name="q4" value="2"> Às vezes</label><br>
+        <label><input type="radio" name="q4" value="3"> Sim, quase sempre</label><br><br>
+
+        <p>5. Você conversa com alguém sobre como se sente?</p>
+        <label><input type="radio" name="q5" value="1"> Quase nunca</label><br>
+        <label><input type="radio" name="q5" value="2"> De vez em quando</label><br>
+        <label><input type="radio" name="q5" value="3"> Sim, regularmente</label><br><br>
+
+        <button type="button" onclick="calcularResultado()">Ver resultado</button>
+      </form>
+      <div id="resultadoQuiz" style="margin-top: 20px; font-weight: bold;"></div>
+    </section>
   </main>
 
   <footer>
@@ -158,7 +191,7 @@
     </div>
   </div>
 
-  <!-- js do model-->
+  <!-- Scripts -->
   <script>
     function abrirModal() {
       document.getElementById("janelaModal").style.display = "block";
@@ -174,75 +207,32 @@
         modal.style.display = "none";
       }
     }
-    <main>
-  ...
-  <!-- Outras seções -->
-  
-  <!-- AQUI -->
-  <section id="quiz">
-    <!-- Teste de saúde mental aqui -->
-  </section>
-      </main>
 
-      <main>
-      <script>
-  function calcularResultado() {
-    const perguntas = ['q1', 'q2', 'q3', 'q4', 'q5'];
-    let total = 0;
+    function calcularResultado() {
+      const perguntas = ['q1', 'q2', 'q3', 'q4', 'q5'];
+      let total = 0;
 
-    for (let i = 0; i < perguntas.length; i++) {
-      const resposta = document.querySelector(`input[name="${perguntas[i]}"]:checked`);
-      if (resposta) {
-        total += parseInt(resposta.value);
-      } else {
-        document.getElementById("resultadoQuiz").innerText = "Responda todas as perguntas, por favor.";
-        return;
+      for (let i = 0; i < perguntas.length; i++) {
+        const resposta = document.querySelector(`input[name="${perguntas[i]}"]:checked`);
+        if (resposta) {
+          total += parseInt(resposta.value);
+        } else {
+          document.getElementById("resultadoQuiz").innerText = "Responda todas as perguntas, por favor.";
+          return;
+        }
       }
-    }
 
-     resultado = "";
-     (total <= 7) {
-      resultado = "⚠️ Sua saúde mental pode estar sobrecarregada. Considere buscar apoio ou conversar com alguém de confiança.";
-    } else if (total <= 11) {
-      resultado = "🟡 Você está em um ponto de atenção. Tente equilibrar suas emoções com pausas e momentos de autocuidado.";
-    } else {
-      resultado = "🟢 Sua saúde mental parece estar bem! Continue cuidando de si e mantendo uma rotina saudável.";
-    }
-
-    document.getElementById("resultadoQuiz").innerText = resultado;
-  }
-</script>
-</main>
-
-  <script>
-  function calcularResultado() {
-    const perguntas = ['q1', 'q2', 'q3', 'q4', 'q5'];
-    let total = 0;
-
-    for (let i = 0; i < perguntas.length; i++) {
-      const resposta = document.querySelector(`input[name="${perguntas[i]}"]:checked`);
-      if (resposta) {
-        total += parseInt(resposta.value);
+      let resultado = "";
+      if (total <= 7) {
+        resultado = "⚠️ Sua saúde mental pode estar sobrecarregada. Considere buscar apoio ou conversar com alguém de confiança.";
+      } else if (total <= 11) {
+        resultado = "🟡 Você está em um ponto de atenção. Tente equilibrar suas emoções com pausas e momentos de autocuidado.";
       } else {
-        document.getElementById("resultadoQuiz").innerText = "Responda todas as perguntas, por favor.";
-        return;
+        resultado = "🟢 Sua saúde mental parece estar bem! Continue cuidando de si e mantendo uma rotina saudável.";
       }
-    }
 
-    let resultado = "";
-    if (total <= 7) {
-      resultado = "⚠️ Sua saúde mental pode estar sobrecarregada. Considere buscar apoio ou conversar com alguém de confiança.";
-    } else if (total <= 11) {
-      resultado = "🟡 Você está em um ponto de atenção. Tente equilibrar suas emoções com pausas e momentos de autocuidado.";
-    } else {
-      resultado = "🟢 Sua saúde mental parece estar bem! Continue cuidando de si e mantendo uma rotina saudável.";
+      document.getElementById("resultadoQuiz").innerText = resultado;
     }
-
-    document.getElementById("resultadoQuiz").innerText = resultado;
-  }
-  </script>
-      
-</main>
   </script>
 </body>
-          </html>
+        </html>
