--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
       <p>Ouça uma playlist feita especialmente para momentos de relaxamento e foco:</p>
       <ul>
         <li><a href="https://open.spotify.com/playlist/37i9dQZF1DX3Ogo9pFvBkY" target="_blank">🎧 Ouvir no Spotify</a></li>
-        <li><a href="https://music.youtube.com/" target="_blank">🎵 Ouvir no YouTube Music</a> <!-- Cole sua playlist aqui depois --></li>
+        <li><a href="https://music.youtube.com/watch?v=pWjmpSD-ph0&si=7nW38lWlrpe1QwO2" target="_blank">🎵 Ouvir no YouTube Music</a> <!-- Cole sua playlist aqui depois --></li>
       </ul>
     </section>
 
