--- a/Index.html
+++ b/Index.html
@@ -131,7 +131,7 @@
       <h2>Playlist calmante 🎵</h2>
       <p>Ouça uma playlist feita especialmente para momentos de relaxamento e foco:</p>
       <ul>
-        <li><a href="https://open.spotify.com/playlist/37i9dQZF1DX3Ogo9pFvBkY" target="_blank">🎧 Ouvir no Spotify</a></li>
+        <li><a href="https://open.spotify.com/playlist/2reT6fDGNUKdfRPAmJo1gG?si=g3Ih0wnQS2GdaJTXg8ETMw&pi=HtTEbWkDS7Wd8" target="_blank">🎧 Ouvir no Spotify</a></li>
         <li><a href="https://music.youtube.com/watch?v=pWjmpSD-ph0&si=7nW38lWlrpe1QwO2" target="_blank">🎵 Ouvir no YouTube Music</a> <!-- Cole sua playlist aqui depois --></li>
       </ul>
     </section>
