--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
 
     <section>
       <h2>Ajuda profissional</h2>
-      <p>Se estiver se sentindo sobrecarregado, procure um psicólogo da escola ou um profissional de saúde mental.</p>
+      <p>Se estiver se sentindo sobrecarregado, procure um psicólogo da escola, um profissional de saúde mental ou ligue para 188 (cvv) apoio emocional e prevenção ao suicídio</p>
     </section>
 
     <section>
